--- a/index.css
+++ b/index.css
@@ -1,3 +1,10 @@
+:root{
+    --fontDiner:'Fontdiner Swanky', cursive;
+    --firaCode:'Fira Sans Condensed', sans-serif;
+    --pressStart:'Press Start 2P', cursive;
+}
+
+
 *{
     padding:0px;
     margin:0px;
@@ -8,7 +15,6 @@
     position: fixed;
     width:100%;
     height:100%;
-    /* border:5px solid black; */
     margin:0px;
     padding:0px;
 
@@ -17,7 +23,6 @@
     overflow: hidden;
     background-color:rgb(39,40,34);
     position: absolute;
-    /* z-index:1; */
     top: 10%;
     left: 5%;
     width:1240px;
@@ -52,6 +57,8 @@
 
 }
 #retryButton{
+    font-family: var(--fontDiner);
+    font-size: 30px;
     width:150px;
     height:50px;
     border:1px solid rgb(39,40,34);
@@ -111,6 +118,7 @@
     color: bisque;
 }
 #introCol1{
+    font-family: var(--firaCode);
     flex:1;
     display:flex;
     border: 2px solid rgb(249,38,114);
@@ -121,6 +129,7 @@
     padding:30px;
 }
 #introCol2{
+    font-family:var(--firaCode);
     flex:1;
     display:flex;
     border: 2px solid rgb(249,38,114);
@@ -155,6 +164,13 @@
     display:flex;
     justify-content: space-evenly
 }
+#score{
+    font-family:var(--fontDiner);
+
+}
+#highScore{
+    font-family:var(--fontDiner);
+}
 #credits{
     position:absolute;
     /* z-index :1; */
@@ -185,4 +201,19 @@
 .list{
     margin:10px;
 }
-
+#lost{
+    font-family:var(--fontDiner);
+    text-align: center;
+}
+#reason{
+    font-family: var(--firaCode);
+    text-align: center;
+}
+#achievement{
+    font-family:var(--pressStart);
+    text-align: center;
+}
+#presentScore{
+    font-family: var(--pressStart);
+    text-align: center;
+}
