--- a/index.css
+++ b/index.css
@@ -8,6 +8,8 @@
 *{
     padding:0px;
     margin:0px;
+    box-sizing:border-box;
+    -moz-box-sizing: border-box;
 }
 
 #backgroundMain{
@@ -60,7 +62,7 @@
     font-family: var(--fontDiner);
     font-size: 30px;
     width:150px;
-    height:50px;
+    height:55px;
     border:1px solid rgb(39,40,34);
     background-color: rgb(249,38,114);
 }
